src/OpenCvSharpExtern/calib3d.h

CVAPI(double) calib3d_stereoCalibrate_InputArray(cv::_InputArray **objectPoints, int opSize,
                                     cv::_InputArray **imagePoints1, int ip1Size,
                                     cv::_InputArray **imagePoints2, int ip2Size,
                                     cv::_OutputArray *cameraMatrix1,
                                     cv::_OutputArray *distCoeffs1,
                                     cv::_OutputArray *cameraMatrix2,
                                     cv::_OutputArray *distCoeffs2,
                                     CvSize imageSize, 
									 cv::_OutputArray *R, cv::_OutputArray *T, 
									 cv::_OutputArray *E, cv::_OutputArray *F,
                                     CvTermCriteria criteria,                              
									 int flags )
{
	std::vector<cv::_InputArray> objectPointsVec(opSize);
	std::vector<cv::_InputArray> imagePoints1Vec(ip1Size);
	std::vector<cv::_InputArray> imagePoints2Vec(ip2Size);
	for (int i = 0; i < opSize; i++)	
		objectPointsVec[i] = *objectPoints[i];
	for (int i = 0; i < ip1Size; i++)	
		imagePoints1Vec[i] = *imagePoints1[i];
	for (int i = 0; i < ip2Size; i++)	
		imagePoints2Vec[i] = *imagePoints2[i];
	
	return cv::stereoCalibrate(objectPointsVec, imagePoints1Vec, imagePoints2Vec,
		*cameraMatrix1, *distCoeffs1,
		*cameraMatrix2, *distCoeffs2,
		imageSize, entity(R), entity(T), entity(E), entity(F), criteria, flags);
}
CVAPI(double) calib3d_stereoCalibrate_array(cv::Point3d **objectPoints, int opSize1, int *opSizes2,
                                     cv::Point2d **imagePoints1, int ip1Size1, int *ip1Sizes2,
                                     cv::Point2d **imagePoints2, int ip2Size1, int *ip2Sizes2,
                                     double *cameraMatrix1,
                                     double *distCoeffs1, int dc1Size,
                                     double *cameraMatrix2,
                                     double *distCoeffs2, int dc2Size,
                                     CvSize imageSize, 
									 cv::_OutputArray *R, cv::_OutputArray *T, 
									 cv::_OutputArray *E, cv::_OutputArray *F,
                                     CvTermCriteria criteria,                              
									 int flags )
{
	std::vector<std::vector<cv::Point3d>> objectPointsVec(opSize1);
	std::vector<std::vector<cv::Point2d>> imagePoints1Vec(ip1Size1);
	std::vector<std::vector<cv::Point2d>> imagePoints2Vec(ip2Size1);
	for (int i = 0; i < opSize1; i++)
		objectPointsVec[i] = std::vector<cv::Point3d>(
			objectPoints[i], objectPoints[i] + opSizes2[i]);
	for (int i = 0; i < ip1Size1; i++)
		imagePoints1Vec[i] = std::vector<cv::Point2d>(
			imagePoints1[i], imagePoints1[i] + ip1Sizes2[i]);
	for (int i = 0; i < ip2Size1; i++)
		imagePoints2Vec[i] = std::vector<cv::Point2d>(
			imagePoints2[i], imagePoints2[i] + ip2Sizes2[i]);
	
	cv::Mat cameraMatrix1M(3, 3, CV_64FC1, cameraMatrix1);
	cv::Mat cameraMatrix2M(3, 3, CV_64FC1, cameraMatrix2);
	cv::Mat distCoeffs1M(dc1Size, 1, CV_64FC1, distCoeffs1);
	cv::Mat distCoeffs2M(dc2Size, 1, CV_64FC1, distCoeffs2);

	return cv::stereoCalibrate(objectPointsVec, imagePoints1Vec, imagePoints2Vec,
		cameraMatrix1M, distCoeffs1M,
		cameraMatrix2M, distCoeffs2M,
		imageSize, entity(R), entity(T), entity(E), entity(F), criteria, flags);
}
CVAPI(cv::StereoBM*) calib3d_StereoBM_new1()
{
	return new cv::StereoBM();
}
CVAPI(cv::StereoBM*) calib3d_StereoBM_new2(int preset, int ndisparities, int SADWindowSize)
{
	return new cv::StereoBM(preset, ndisparities, SADWindowSize);
}
CVAPI(void) calib3d_StereoBM_init(cv::StereoBM *obj, int preset, int ndisparities, int SADWindowSize)
{
	obj->init(preset, ndisparities, SADWindowSize);
}
CVAPI(void) calib3d_StereoBM_delete(cv::StereoBM* obj)
{
	delete obj;
}
CVAPI(void) calib3d_StereoBM_compute(cv::StereoBM* obj, cv::_InputArray* left, cv::_InputArray* right, 
									 cv::_OutputArray* disp, int disptype)
{
	(*obj)(*left, *right, *disp, disptype);
}
CVAPI(void) calib3d_StereoSGBM_delete(cv::StereoSGBM* obj)
{
	delete obj;
}
CVAPI(cv::StereoSGBM*) calib3d_StereoSGBM_new1()
{
	return new cv::StereoSGBM();
}
CVAPI(cv::StereoSGBM*) calib3d_StereoSGBM_new2(int minDisparity, int numDisparities, int SADWindowSize, int P1, int P2, int disp12MaxDiff, int preFilterCap, int uniquenessRatio, int speckleWindowSize, int speckleRange, bool fullDP)
{
	return new cv::StereoSGBM(minDisparity, numDisparities, SADWindowSize, P1, P2, disp12MaxDiff, preFilterCap, uniquenessRatio, speckleWindowSize, speckleRange, fullDP);
}
CVAPI(void) calib3d_StereoSGBM_compute(cv::StereoSGBM* obj, cv::_InputArray* left, cv::_InputArray* right, cv::_OutputArray* disp)
{
	(*obj)(*left, *right, *disp);
}
CVAPI(int) calib3d_StereoSGBM_minDisparity_get(const cv::StereoSGBM* obj)
{
	return obj->minDisparity;
}
CVAPI(void) calib3d_StereoSGBM_minDisparity_set(cv::StereoSGBM* obj, int value)
{
	obj->minDisparity = value;
}
CVAPI(int) calib3d_StereoSGBM_numberOfDisparities_get(const cv::StereoSGBM* obj)
{
	return obj->numberOfDisparities;
}
CVAPI(void) calib3d_StereoSGBM_numberOfDisparities_set(cv::StereoSGBM* obj, int value)
{
	obj->numberOfDisparities = value;
}
CVAPI(int) calib3d_StereoSGBM_SADWindowSize_get(const cv::StereoSGBM* obj)
{
	return obj->SADWindowSize;
}
CVAPI(void) calib3d_StereoSGBM_SADWindowSize_set(cv::StereoSGBM* obj, int value)
{
	obj->SADWindowSize = value;
}
CVAPI(int) calib3d_StereoSGBM_preFilterCap_get(const cv::StereoSGBM* obj)
{
	return obj->preFilterCap;
}
CVAPI(void) calib3d_StereoSGBM_preFilterCap_set(cv::StereoSGBM* obj, int value)
{
	obj->preFilterCap = value;
}
CVAPI(int) calib3d_StereoSGBM_uniquenessRatio_get(const cv::StereoSGBM* obj)
{
	return obj->uniquenessRatio;
}
CVAPI(void) calib3d_StereoSGBM_uniquenessRatio_set(cv::StereoSGBM* obj, int value)
{
	obj->uniquenessRatio = value;
}
CVAPI(int) calib3d_StereoSGBM_P1_get(const cv::StereoSGBM* obj)
{
	return obj->P1;
}
CVAPI(void) calib3d_StereoSGBM_P1_set(cv::StereoSGBM* obj, int value)
{
	obj->P1 = value;
}
CVAPI(int) calib3d_StereoSGBM_P2_get(const cv::StereoSGBM* obj)
{
	return obj->P2;
}
CVAPI(void) calib3d_StereoSGBM_P2_set(cv::StereoSGBM* obj, int value)
{
	obj->P2 = value;
}
CVAPI(int) calib3d_StereoSGBM_speckleWindowSize_get(const cv::StereoSGBM* obj)
{
	return obj->speckleWindowSize;
}
CVAPI(void) calib3d_StereoSGBM_speckleWindowSize_set(cv::StereoSGBM* obj, int value)
{
	obj->speckleWindowSize = value;
}
CVAPI(int) calib3d_StereoSGBM_speckleRange_get(const cv::StereoSGBM* obj)
{
	return obj->speckleRange;
}
CVAPI(void) calib3d_StereoSGBM_speckleRange_set(cv::StereoSGBM* obj, int value)
{
	obj->speckleRange = value;
}
CVAPI(int) calib3d_StereoSGBM_disp12MaxDiff_get(const cv::StereoSGBM* obj)
{
	return obj->disp12MaxDiff;
}
CVAPI(void) calib3d_StereoSGBM_disp12MaxDiff_set(cv::StereoSGBM* obj, int value)
{
	obj->disp12MaxDiff = value;
}
CVAPI(int) calib3d_StereoSGBM_fullDP_get(const cv::StereoSGBM* obj)
{
	return obj->fullDP ? 1 : 0;
}
CVAPI(void) calib3d_StereoSGBM_fullDP_set(cv::StereoSGBM* obj, int value)
{
	obj->fullDP = (value != 0);
}